--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 body {
+    font-family: "Roboto", "Helvectica", "sans-serif"
     margin: 60px auto;
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:'Roboto', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -21,7 +21,6 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Roboto', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
@@ -33,8 +32,8 @@ footer {
     font-size: .8em;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
+ul.posts {
+    margin: 20px auto 40px;
     font-size: 1.5em;
 }
 
