--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:, 'Arial', 'Sans-Serif';
+    font-family: 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
