--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,14 +15,15 @@
 	    		</ul>
 			</nav>
 			<div class="container">
-			
+
 			{{ content }}
-			
+
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:rishiosaur@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/684386">github.com/684386</a></li>
+	        		<li><a href="https://github.com/684386">github</a></li>
+							<li><a href="http://twitter.com/LifeOfARaven">twitter</a></li>
 				</ul>
 			</footer>
 		</body>
