--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body { margin: 60px auto; width: 70%;background-color: #018CE6}
 
-a { text-decoration: none; color: #999; }
+a { text-decoration: none; color: black; }
 a:hover { text-decoration: underline; }
 
 p, ul { font-size: 1.5em; line-height: 1.4em; color: black; }
