--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:rishiosaur@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/684386">github</a></li>
-							<li><a href="http://twitter.com/LifeOfARaven">twitter</a></li>
+	        		<li><a href="https://github.com/rishiosaur">github</a></li>
+							<li><a href="http://twitter.com/rishiosaur">twitter</a></li>
 							<li><a href="mailto:rishi2019@wgdavis.ca">school email</a></li>
 				</ul>
 			</footer>
