--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,30 @@
-body { margin: 60px auto; width: 70%;background-color: #018CE6}
+body { margin: 60px auto; width: 70%;background-color: whitesmoke}
 
 a {text-decoration: none;color: black; font-weight: bold;}
 a:hover { text-decoration: underline; }
 
 p, ul { font-size: 1.5em; line-height: 1.4em; color: black; font-family: 'Georgia', 'Cambria', 'Helvetica', 'Arial', 'Sans-Serif';}
 
-h1, h2, h3, h4 { font-family: 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; }
+h1, h2, h3, h4 { font-family: 'Kollektif', 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
 
-nav ul, footer ul { font-size: 1em; font-family: 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
+nav{ background-color: #e6e6e6; padding: 10px; }
+nav ul, footer ul { font-size: 1em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: none; display: inline;}
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
-footer { border-top: 1px solid black; font-size: .8em; }
-
-.post{ background-color: rgba(#00192B, 0.83);}
+footer { background-color: #e6e6e6; padding: 10px;}
 /* Blog */
-ul.posts { margin: 20px auto 40px; font-size: 1.5em; }
+
+ul.posts { margin: 20px auto 40px; font-size: 1.5em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: none;}
 ul.posts li { list-style: none; }
 
 /* CV */
 .cv { margin: 0px 0px 60px; }
 .cv h1 { font-size: 3em; }
 .cv h2 { font-size: 2em; }
-.cv address, .cv .download { font-family: 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; }
+.cv address, .cv .download { font-family:'Kollektif', 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; }
 .cv address, .cv p { font-size: 1.2em; }
 .cv .download { float: right; font-size: .8em; text-transform: uppercase; }
