--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,11 @@
 			<nav>
 	    		<ul>
 						<li>rishiosaur.</li>
-	        	<li><a href="/" class="navlink">Home</a></li>
-		        <li><a href="/about" class="navlink">About</a></li>
-	        	<li><a href="/cv" class="navlink">CV</a></li>
-	        	<li><a href="/blog" class="navlink">Blog</a></li>
-						<li><a href="/blog/atom.xml" class="navlink">RSS</a></li>
+	        	<li><a href="/" class="navlink">home.</a></li>
+		        <li><a href="/about" class="navlink">about.</a></li>
+	        	<li><a href="/cv" class="navlink">cv.</a></li>
+	        	<li><a href="/blog" class="navlink">blog.</a></li>
+						<li><a href="/blog/atom.xml" class="navlink">rss.</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -23,10 +23,11 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:rishiosaur@gmail.com" class="navlink">email</a></li>
-	        		<li><a href="https://github.com/rishiosaur" class="navlink">github</a></li>
-							<li><a href="http://twitter.com/rishiosaur" class="navlink">twitter</a></li>
-							<li><a href="mailto:rishi2019@wgdavis.ca" class="navlink">school email</a></li>
+	        		<li><a href="mailto:rishiosaur@gmail.com" class="navlink">email.</a></li>
+	        		<li><a href="https://github.com/rishiosaur" class="navlink">github.</a></li>
+							<li><a href="http://twitter.com/rishiosaur" class="navlink">twitter.</a></li>
+							<li><a href="mailto:rishi2019@wgdavis.ca" class="navlink">school email.</a></li>
+							<li><a href="http://pages.github.com" class="navlink align-right">Proudly Hosted By GitHub Pages.</a></li>
 				</ul>
 			</footer>
 		</body>
