--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 body { margin: 60px auto; width: 70%;background-color: whitesmoke}
 
 a{ text-decoration: none;color: black; font-weight: bold; }
-.postlink {text-decoration: none;color: black; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.3s ease; position: relative; display: inline-block;}
-.postlink:hover { background: #000;
-  color: #fff;}
-.navlink {text-decoration: none;color: black; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.3s ease; position: relative; display: inline-block;}
+.postlink { text-decoration: none;color: black; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.3s ease; position: relative; display: inline-block; }
+.postlink:hover { background: #000;color: #fff; }
+.navlink {text-decoration: none;color: black; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.3s ease; position: relative; display: inline-block; }
 .navlink:hover { background: #D9d9d9;}
-p, ul { font-size: 1.5em; line-height: 1.4em; color: black; font-family: 'Georgia', 'Cambria', 'Helvetica', 'Arial', 'Sans-Serif';}
+.btnlink {text-decoration: none;color: black; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.3s ease; position: relative; display: inline-block; }
+.btnlink:hover { background: #e6e6e6;}
+.align-right{ align: right; }
+p, ul { font-size: 1.5em; line-height: 1.4em; color: black; font-family: 'Lora', 'Georgia', 'Cambria', 'Helvetica', 'Arial', 'Sans-Serif'; }
 
 h1, h2, h3, h4 { font-family: 'Kollektif', 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 3em;  }
@@ -14,11 +16,11 @@ h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
 
-
+nav{ background-color: #e6e6e6; padding: 10px 25px;}
 nav ul, footer ul { font-size: 1em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: none; display: inline;}
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
-footer { background-color: #e6e6e6; padding: 10px;}
+footer { background-color: #e6e6e6; padding: 10px; align: bottom;}
 /* Blog */
 
 ul.posts { margin: 20px auto 40px; font-size: 1.5em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: none;}
