--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 	        		<li><a href="https://github.com/rishiosaur" class="navlink">github.</a></li>
 							<li><a href="http://twitter.com/rishiosaur" class="navlink">twitter.</a></li>
 							<li><a href="mailto:rishi2019@wgdavis.ca" class="navlink">school email.</a></li>
-							<li><a href="http://pages.github.com" class="navlink align-right">Proudly Hosted By GitHub Pages.</a></li>
+							<li><a href="http://pages.github.com" class="navlink">Proudly Hosted By GitHub Pages.</a></li>
 				</ul>
 			</footer>
 		</body>
