--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+			<!-- Navigation -->
 			<nav>
 	    		<ul>
 						<li>rishiosaur.</li>
@@ -16,16 +17,22 @@
 						<li><a href="/blog/atom.xml" class="navlink">rss.</a></li>
 	    		</ul>
 			</nav>
+			<!-- Content -->
 			<div class="container">
 
-			{{ content }}
+			<!-- Angular via Jekyll for content in _posts/ to be rendered by _layouts/post.html -->{{ content }}
 
-			</div><!-- /.container -->
+			</div>
+			<!-- Footer -->
 			<footer>
 	    		<ul>
+							<!-- Main email -->
 	        		<li><a href="mailto:rishiosaur@gmail.com" class="navlink">email.</a></li>
+							<!-- GitHub -->
 	        		<li><a href="https://github.com/rishiosaur" class="navlink">github.</a></li>
+							<!-- Twitter -->
 							<li><a href="http://twitter.com/rishiosaur" class="navlink">twitter.</a></li>
+							<!-- School Email -->
 							<li><a href="mailto:rishi2019@wgdavis.ca" class="navlink">school email.</a></li>
 							<li><a href="http://pages.github.com" class="navlink">Proudly Hosted By GitHub Pages.</a></li>
 				</ul>
