--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,19 @@
 /* General Stuff */
-body { margin: 60px auto; width: 70%;background-color: whitesmoke}
+
+body { margin: 60px auto; width: 70%;background-color: #1a1a1a; color: whitesmoke;}
 
 
 /* Link Buttons */
-.postlink { text-decoration: none;color: black; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.3s ease; position: relative; display: inline-block; }
-.postlink:hover { background: #000;color: #fff; }
-.navlink {text-decoration: none;color: black; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.3s ease; position: relative; display: inline-block; }
-.navlink:hover { background: #D9d9d9;}
-.btnlink {text-decoration: none;color: black; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.3s ease; position: relative; display: inline-block; }
-.btnlink:hover { background: #e6e6e6;}
-.align-right{ align: right; }
+.postlink { text-decoration: none;color: whitesmoke;; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
+.postlink:hover { background: #d9d9d9;color: #333333; }
+.navlink { text-decoration: none;color: whitesmoke;; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
+.navlink:hover { background: #333333;}
+.btnlink { text-decoration: none;color: whitesmoke;; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
+.btnlink:hover { background: #333333;}
 
 /* Text Stylings */
-a{ text-decoration: none;color: black; font-weight: bold; }
-p, ul { font-size: 1.5em; line-height: 1.4em; color: black; font-family: 'Lora', 'Georgia', 'Cambria', 'Helvetica', 'Arial', 'Sans-Serif'; }
+a { text-decoration: none;color: whitesmoke;; font-weight: bold; }
+p, ul { font-size: 1.5em; line-height: 1.4em; color: whitesmoke;; font-family: 'Lora', 'Georgia', 'Cambria', 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1, h2, h3, h4 { font-family: 'Kollektif', 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
@@ -21,14 +21,14 @@ h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
 
 /* Nav and Footer stylings */
-nav{ background-color: #e6e6e6; padding: 10px 25px;}
+nav{ background-color: #262626; padding: 10px 25px;}
 nav ul, footer ul { font-size: 1em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: none; display: inline;}
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
-footer { background-color: #e6e6e6; padding: 10px; align: bottom;}
+footer { background-color: #262626; padding: 10px; float: bottom;}
 /* Blog */
 .titlefont{ font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif';}
-ul.posts { margin: 20px auto 40px; font-size: 1.5em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: none;}
+ul.posts { margin: 20px auto 40px; font-size: 1.5em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: none; }
 ul.posts li { list-style: none; }
 
 /* CV */
