--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!-- In a post, there is YAML front matter at the very top, just like this one. The <h1> tag renders the title part into the title, with AngularJS. -->
 <h1>{{ page.title }}</h1>
 <p class="meta titlefont">{{ page.date | date_to_string }}</p>
 
