--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,12 @@ body { margin: 60px auto; width: 70%;background-color: #1a1a1a; color: whitesmok
 
 
 /* Link Buttons */
-.postlink { text-decoration: none;color: whitesmoke;; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
+.postlink { text-decoration: none;color: whitesmoke; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
 .postlink:hover { background: #d9d9d9;color: #333333; }
-.navlink { text-decoration: none;color: whitesmoke;; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
-.navlink:hover { background: #333333;}
-.btnlink { text-decoration: none;color: whitesmoke;; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
-.btnlink:hover { background: #333333;}
+.navlink { text-decoration: none;color: whitesmoke; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
+.navlink:hover { background: #333333; }
+.btnlink { text-decoration: none;color: whitesmoke; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
+.btnlink:hover { background: #333333; }
 
 /* Text Stylings */
 a { text-decoration: none;color: whitesmoke;; font-weight: bold; }
