--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/* Imports */
+
+
 /* General Stuff */
 body { margin: 60px auto; width: 70%;background-color: #1a1a1a; color: whitesmoke;}
 
@@ -11,8 +14,8 @@ body { margin: 60px auto; width: 70%;background-color: #1a1a1a; color: whitesmok
 .btnlink:hover { background: #333333; }
 
 /* Text Stylings */
-a { text-decoration: none;color: whitesmoke;; font-weight: bold; }
-p, ul { font-size: 1.5em; line-height: 1.4em; color: whitesmoke;; font-family: 'Lora', 'Georgia', 'Cambria', 'Helvetica', 'Arial', 'Sans-Serif'; }
+a { text-decoration: none;color: whitesmoke; font-weight: bold; }
+p, ul { font-size: 1.5em; line-height: 1.4em; color: whitesmoke; font-family: 'Lora', 'Georgia', 'Cambria', 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1, h2, h3, h4 { font-family: 'Kollektif', 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
