--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 	        	<li><a href="/cv" class="navlink">cv.</a></li>
 	        	<li><a href="/blog" class="navlink">blog.</a></li>
 						<li><a href="/blog/atom.xml" class="navlink">rss.</a></li>
+						<li><a href="/podcast" class="navlink">podcast.</a></li>
 	    		</ul>
 			</nav>
 			<!-- Content -->
