--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 			<!-- Navigation -->
 			<nav>
 	    		<ul>
-						<li>rishiosaur.</li>
+						<li><strong>rishiosaur.</strong></li>
 	        	<li><a href="/" class="navlink">home.</a></li>
 		        <li><a href="/about" class="navlink">about.</a></li>
 	        	<li><a href="/cv" class="navlink">cv.</a></li>
