--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <!-- In a post, there is YAML front matter at the very top, just like this one. The <h1> tag renders the title part into the title, with AngularJS. -->
-<h1 id="borderleft">{{ page.title }}</h1>
-<p class="meta titlefont" id="borderleft">{{ page.date | date_to_string }}</p>
+<h1>{{ page.title }}</h1>
+<p class="meta titlefont">{{ page.date | date_to_string }}</p>
 
 <div class="post">
   {{ content }}
