--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ img { box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2); }
 .navlink:hover { background: #333333; }
 .btnlink { text-decoration: none;color: whitesmoke; font-weight: bold; padding: 10px 25px; font-weight: 500; background: transparent; outline: none !important; cursor: pointer; transition: all 0.5s ease; position: relative; display: inline-block; }
 .btnlink:hover { background: #333333; }
+.linklink { text-decoration: none;color: whitesmoke; font-weight: bold; transition: all 0.25s ease; }
+.linklink:hover { background-color: #whitesmoke; color: #333333 }
 
 /* Text Stylings */
 #borderleft { border-left: 6px solid whitesmoke; padding-left: 12px; }
@@ -23,14 +25,15 @@ h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
+.description { margin-left: 20px;}
 
 /* Nav and Footer stylings */
 nav{ background-color: #262626; padding: 10px 25px; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2);}
 nav ul, footer ul { font-size: 1em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: none; display: inline;}
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
-
 footer { background-color: #262626; padding: 10px; float: bottom; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2);}
-/* Blog */
+
+/* Bloggy stuff */
 .titlefont { font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; }
 ul.posts { margin: 20px auto 40px; font-size: 1.5em; font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: none; }
 ul.posts li { list-style: none; }
