--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,14 @@
 			<!-- Navigation -->
 			<nav>
 	    		<ul>
-						<li><strong>rishiosaur.</strong></li>
-	        	<li><a href="/" class="navlink">home.</a></li>
+						<li><a href="/" class="navlink"><strong>rishiosaur.</strong></a></li>
 		        <li><a href="/about" class="navlink">about.</a></li>
 	        	<li><a href="/cv" class="navlink">cv.</a></li>
 	        	<li><a href="/blog" class="navlink">blog.</a></li>
+						<li><a href="/categories" class="navlink">categories.</a></li>
 						<li><a href="/blog/atom.xml" class="navlink">rss.</a></li>
 						<li><a href="/podcast" class="navlink">podcast.</a></li>
+
 	    		</ul>
 			</nav>
 			<!-- Content -->
@@ -36,6 +37,9 @@
 							<li><a href="http://twitter.com/rishiosaur" class="navlink">twitter.</a></li>
 							<!-- School Email -->
 							<li><a href="mailto:rishi2019@wgdavis.ca" class="navlink">school email.</a></li>
+							<!-- Medium Publication -->
+							<li><a href="https://medium.com/18-over-3" class="navlink">medium.</a></li>
+							<!-- Github Pages -->
 							<li><a href="http://pages.github.com" class="navlink">Proudly Hosted By GitHub Pages.</a></li>
 				</ul>
 			</footer>
