--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-/* Imports */
 /* General Stuff */
 body {
     margin: 60px auto;
@@ -141,7 +140,7 @@ p, ul {
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Kollektif', 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Kollektif', 'Roboto', 'Helvetica', 'Arial', 'Sans-Serif';
 }
 
 h1 {
@@ -197,6 +196,10 @@ footer {
 }
 
 /* Bloggy stuff */
+.post{
+  padding: 100px;
+}
+
 .titlefont {
     font-family: 'Kollektif','Roboto', 'Helvetica', 'Arial', 'Sans-Serif';
 }
