--- a/_layouts/otherpage.html
+++ b/_layouts/otherpage.html
@@ -1,9 +1,61 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html>
 
-<h1>{{ page.title }}</h1>
+<head>
+  <!-- Renders the YAML front matter into the title of the page -->
+  <title>{{ page.title }}</title>
+  <!-- link to main stylesheet -->
+  <!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
+  <link rel="stylesheet" href="/css/tachyons.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .full-width {
+      margin-left: calc(-100vw / 2 + 500px / 2);
+      margin-right: calc(-100vw / 2 + 500px / 2);
+    }
 
-<div class="stuff">
-  {{ content }}
-</div>
+    #footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 2.5rem;
+      /* Footer height */
+    }.parallax { 
+  /* The image used */
+
+  /* Set a specific height */
+max-width:initial;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+}</style>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#f6fffe">
+<meta name="theme-color" content="#ffffff">
+</head>
+
+<body class="helvetica center bg-washed-blue">
+  <article class="">
+    <div class="center f5 pv2 lh-copy ph2">
+      {{content}}
+    </div>
+  </article>
+  <!-- Footer -->
+  <footer class="pv4 ph3 ph5-m ph6-l mid-gray lh-copy">
+
+    <div class="tc pb3">
+      <a class="link black hover-blue ba pa2 b f6 f5-ns dib mr3" href="/" title="Home">rishi.</a>
+      <a class="link gray hover-green    f6 f5-ns dib mr3" href="/blog" title="About">blog.</a>
+    </div>
+  </footer>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+</body>
+
+</html>
