--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,75 @@
----
-layout: default
----
-<!-- In a post, there is YAML front matter at the very top, just like this one. The <h1> tag renders the title part into the title, with AngularJS. -->
-<h1>{{ page.title }}</h1>
-<p class="meta titlefont">{{ page.date | date_to_string }}</p>
+<!DOCTYPE html>
+<html>
 
-<div class="post-categories">
-  {% if post %}
-    {% assign categories = post.categories %}
-  {% else %}
-    {% assign categories = page.categories %}
-  {% endif %}
-  {% for category in categories %}
-  <a class="taglink post" href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
-  {% unless forloop.last %}&nbsp;{% endunless %}
-  {% endfor %}
-</div>
-<div>
-  {{ content }}
-</div>
+<head>
+  <!-- Renders the YAML front matter into the title of the page -->
+  <title>{{ page.title }}</title>
+  <!-- link to main stylesheet -->
+  <!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
+  <link rel="stylesheet" href="/css/tachyons.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .full-width {
+      margin-left: calc(-100vw / 2 + 500px / 2);
+      margin-right: calc(-100vw / 2 + 500px / 2);
+    }
+
+    #footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 2.5rem;
+      /* Footer height */
+    }
+  </style>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#f6fffe">
+	<meta name="theme-color" content="#ffffff">
+</head>
+
+<body class="helvetica center">
+  <article class="">
+    <div class="vh-100 dt w-100 tc bg-dark-gray white cover"
+      style="background: black url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/Sxlh_vs3it7xa78y/videoblocks-animation-motion-background-white-and-glow-dust-particle-abstract-on-black-background-uhd-4k-3840x2160_hzgzzdvbtf_thumbnail-full01.png) no-repeat center; background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;">
+      <div class="dtc v-mid">
+        <h1 class="f1 f-headline-l fw3 white-60">{{page.title}}</h1>
+        <ul class="list ph3 ph5-ns pv2">
+          {% if post %}
+          {% assign categories = post.categories %}
+          {% else %}
+          {% assign categories = page.categories %}
+          {% endif %}
+          {% for category in categories %}
+          <li class="dib mr1 mb2"><a href="{{site.baseurl}}/categories/#{{category|slugize}}"
+              class="f6 f5-ns b db pa2 link dim white-70 ba">{{category}}</a></li>
+          {% unless forloop.last %}&nbsp;{% endunless %}
+          {% endfor %}
+        </ul>
+
+        <blockquote class="ph0 mh0 measure f4 lh-copy center">
+          <p class="fw1 white-70">
+            {{page.description}}
+          </p>
+          <cite class="f6 ttu tracked fs-normal">{{page.date|date_to_string}}</cite>
+        </blockquote>
+      </div>
+    </div>
+    <div class="center measure-wide f5 pv2 lh-copy ph2">
+      {{content}}
+    </div>
+  </article>
+  <!-- Footer -->
+  <footer class="pv4 ph3 ph5-m ph6-l mid-gray lh-copy">
+
+    <div class="tc pb3">
+      <a class="link black hover-blue ba pa2 b f6 f5-ns dib mr3" href="/" title="Home">rishi.</a>
+      <a class="link gray hover-green    f6 f5-ns dib mr3" href="/blog" title="About">blog.</a>
+    </div>
+  </footer>
+</body>
+
+</html>
