--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,6 +67,7 @@
 
     <div class="tc pb3">
       <a class="link black hover-blue ba pa2 b f6 f5-ns dib mr3" href="/" title="Home">rishi.</a>
+      <a class="link gray hover-light-green pa2 f6 f5-ns dib mr3" href="/projects" title="Home">projects.</a>
       <a class="link gray hover-green    f6 f5-ns dib mr3" href="/blog" title="About">blog.</a>
     </div>
   </footer>
