--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -21,78 +21,85 @@
       height: 2.5rem;
       /* Footer height */
     }
+
+    .border-up {
+      background:
+        linear-gradient(to bottom, var(--theme) 0%,
+        var(--theme) 100%);
+      background-position: 0 100%;
+      background-repeat: repeat-x;
+      background-size: 4px 4px;
+      color: #000;
+      text-decoration: none;
+      transition-timing-function: ease-in-out;
+      transition: background-size .2s;
+      
+    }
+
+    .border-up:hover {
+      background-size: 4px 50px;
+    }
   </style>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#f6fffe">
-	<meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#f6fffe">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body class="helvetica center">
-    <article data-name="article-full-bleed-background">
-        <div class="cf" style="background: url({{page.screenshot}}) no-repeat center center fixed; background-size: cover;">
-          <div class="fl pa3 pa4-ns bg-white black-70 measure-narrow f3 times">
-            <header class="bb b--black-70 pv4">
-              <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">{{page.title}}</h3>
-              <h4 class="f3 fw4 i lh-title mt0">{{page.description}}</h4>
-            </header>
-            <section class="pt5 pb4">
-              <p class="sans-serif lh-copy measure f4 mt0">
-                {{page.moreinfo}}
-              </p>
-            </section>
-          </div>
-        </div>
-      </article>
-      <main class="cf pa3 pa4-m pa5-l mw9 center">
-        <div class="fr w-100 w-80-l">
-          <p class="f6">
-            Beitrage zut
-          </p>
-          <h1 class="f2 f1-l lh-title mt0 mb4 mb5-ns">
-            {{page.title}}
-          </h1>
-        </div>
-        <div class="f6 lh-copy fl w-100 mb4">
-          <div class="fl-ns w-100 w-20-l pr3-m pr5-l">
-            <p>
-              Jahrbuch <small class="fw6">1968/69</small>
-            </p> 
-          </div>
-          <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
-            <p>
-              Institut suisse pour l'étude de l'art
-            </p> 
-          </div>
-          <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
-            <p>
-              Schweizerisches<br class="dn db-l"> Institut für Kunstwissenschaft
-            </p> 
-          </div>
-          <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
-            <p>
-              Istituto svizzero di studi d'arte
-            </p>
-          </div>
-          <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
-            <p>
-              Swiss Institute for Art Research
-            </p>
-          </div>
-        </div>
-        <img src="{{page.screenshot}}" class="db shadow-2" alt="iceland"/>
-      </main>
-      <div class="measure-wide center">
-          {{content}}
+  <main class="cf pa3 pa4-m pa5-l mw9 center">
+    <div class="fr w-100 w-80-l">
+      <p class="f6">
+        {{page.catchphrase}}
+      </p>
+      <h1 class="f2 f1-l lh-title mt0 mb4 mb5-ns dib"><a href="https://github.com/rishiosaur/{{page.repo}}"
+          style="--theme:{{page.theme}}" class="hover-{{page.color }} no-underline black border-up">
+          {{page.title}}</a>
+      </h1>
+    </div>
+    <div class="f6 lh-copy fl w-100 mb4">
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+        <p>
+          {{page.info1}}
+        </p>
       </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+        <p>
+          {{page.info2}}
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+        <p>
+          {{page.info3}}
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+        <p>
+          {{page.info4}}
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+        <p>
+          {{page.info5}}
+        </p>
+      </div>
+    </div>
+    {% if page.screenshot %}
+    <img src="{{page.screenshot}}" class="db shadow-2" alt="iceland" />
+    {% endif %}
+  </main>
+  <div class="measure-wide center">
+    {{content}}
+  </div>
   <!-- Footer -->
   <footer class="pv4 ph3 ph5-m ph6-l mid-gray lh-copy">
 
     <div class="tc pb3">
       <a class="link black hover-blue ba pa2 b f6 f5-ns dib mr3" href="/" title="Home">rishi.</a>
+      <a class="link gray hover-light-green pa2 f6 f5-ns dib mr3" href="/projects" title="Home">projects.</a>
       <a class="link gray hover-green    f6 f5-ns dib mr3" href="/blog" title="About">blog.</a>
     </div>
   </footer>
