--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -91,7 +91,7 @@
     <img src="{{page.screenshot}}" class="db shadow-2" alt="iceland" />
     {% endif %}
   </main>
-  <div class="measure-wide center">
+  <div class="measure-wide center ph0-l ph2">
     {{content}}
   </div>
   <!-- Footer -->
