--- a/_layouts/otherpage.html
+++ b/_layouts/otherpage.html
@@ -46,7 +46,57 @@ max-width:initial;
     .border-up:hover {
       background-size: 4px 50px;
     }
-  </style>
+  </style><style>
+		.full-width {
+			margin-left: calc(-100vw / 2 + 500px / 2);
+			margin-right: calc(-100vw / 2 + 500px / 2);
+		}
+
+		#footer {
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			height: 2.5rem;
+			/* Footer height */
+		}
+		.measure-wide{
+			max-width: 34em; 
+		}
+		.offset {
+  box-shadow: 0.3em 0.3em 0 0 var(--color), inset 0.3em 0.3em 0 0 var(--color);
+}
+.offset:hover, .offset:focus {
+  box-shadow: 0 0 0 0 var(--hover), inset 6em 3.5em 0 0 var(--hover);
+}
+.border-up {
+      background:
+        linear-gradient(to bottom, var(--theme) 0%,
+        var(--theme) 100%);
+      background-position: 0 100%;
+      background-repeat: repeat-x;
+      background-size: 4px 4px;
+      color: #000;
+      text-decoration: none;
+      transition-timing-function: ease-in-out;
+      transition: background-size .2s;
+      
+    }
+
+    .border-up:hover {
+      background-size: 4px 50px;
+	}
+	.border-down {
+		background:
+        linear-gradient(to bottom, var(--theme) 0%,
+        var(--theme) 100%);
+      background-position: 0 105%;
+      background-repeat: repeat-x;
+      background-size: 4px 4px;
+      text-decoration: none;
+      transition-timing-function: ease-in-out;
+      transition: background-size .2s;;
+	}
+	</style>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -56,7 +106,7 @@ max-width:initial;
 <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="helvetica center bg-washed-blue">
+<body class="helvetica center ">
   <article class="">
     <div class="center f5 pv2 lh-copy ph2">
       {{content}}
