--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,7 @@
       transition-timing-function: ease-in-out;
       transition: background-size .2s;;
 	}
+	.background {}
 	</style>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
