--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,12 +49,9 @@
       background-size: 4px 50px;
 	}
 	.border-down {
-		background:
-        linear-gradient(to bottom, var(--theme) 0%,
-        var(--theme) 100%);
-      background-position: 0 105%;
-      background-repeat: repeat-x;
-      background-size: 4px 4px;
+		background: linear-gradient(to bottom, var(--theme) 0%,
+		var(--theme) 100%) repeat-x 0 105%;
+		background-size: 4px 4px;
       text-decoration: none;
       transition-timing-function: ease-in-out;
       transition: background-size .2s;;
