--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,9 +66,11 @@
   <footer class="pv4 ph3 ph5-m ph6-l mid-gray lh-copy">
 
     <div class="tc pb3">
-      <a class="link black hover-blue ba pa2 b f6 f5-ns dib mr3" href="/" title="Home">rishi.</a>
+      <a class="link black hover-blue ba pa2 b f6 f5-ns dib mr3 offset" href="/" title="Home">rishi.</a>
       <a class="link gray hover-light-green pa2 f6 f5-ns dib mr3" href="/projects" title="Home">projects.</a>
       <a class="link gray hover-green    f6 f5-ns dib mr3" href="/blog" title="About">blog.</a>
+      <a class="link gray hover-light-purple f6 f5-ns dib mr3" href="/about" title="Store">about.</a>
+      <a class="link gray hover-light-blue f6 f5-ns dib" href="/contact" title="Contact">contact.</a>>
     </div>
   </footer>
 </body>
