--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<!-- Renders the YAML front matter into the title of the page -->
 	<title>{{ page.title }}</title>
 	<!-- link to main stylesheet -->
-	<!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<link rel="stylesheet" href="/css/tachyons.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
