--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,19 +67,20 @@
 	<meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="helvetica">
-	<main class="measure-wide center pt5 ph3 pb3">
+<body class="">
+	<main class="measure-wide center ph3 pb3">
 	<!-- Navigation -->
-	<nav class="ph-2 center" >
+	<nav class="fixed mb7 w-100 ph2 box-shadow pv2 center z-999 bg-white" >
+		<div class="">
 		<a class="link black hover-blue ba pa2 b f6 f5-ns dib mr3 offset" href="/" title="Home">rishi.</a>
 		<a class="link gray hover-light-green pa2 f6 f5-ns dib mr3" href="/projects" title="Home">projects.</a>
 		<a class="link gray hover-green    f6 f5-ns dib mr3" href="/blog" title="About">blog.</a>
 		<a class="link gray hover-light-purple f6 f5-ns dib mr3" href="/about" title="Store">about.</a>
 		<a class="link gray hover-light-blue f6 f5-ns dib" href="/contact" title="Contact">contact.</a>
+	</div>
 	</nav>
-
 	<!-- Content -->
-	<div class="">
+	<div class="pt5">
 		{{ content }}
 	</div>
 
