--- a/css/main.css
+++ b/css/main.css
@@ -57,3 +57,8 @@
         filter: brightness(0.5) blur(4px);
     }
 }
+
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
