--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 	<meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="sans-serif">
+<body style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
 	<main class="measure-wide center ph3 pb3">
 	<!-- Navigation -->
 	<nav class="fixed mb7 w-100 ph2 box-shadow pv2 center z-999 bg-white" >
